--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hmack.circlespawn"
+    package="de.reimerm.libgdxkotlinexample"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
-            android:name="com.hmack.circlespawn.AndroidLauncher"
+            android:name="de.reimerm.libgdxkotlinexample.AndroidLauncher"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
